--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: 'Roboto';
     font-size: 16px;
-    display: flex;
+    display: block;
     flex-direction: column;
     height: 100vh;
     justify-content: center;
