--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 body {
     margin: 0;
-    font-family: 'Roboto';
+    font-family: 'lobster';
     font-size: 16px;
     display: block;
     flex-direction: column;
     height: 100vh;
     justify-content: center;
 }
+
+/*Gallery - carousel*/
 .carousel {
     padding: 20px;
     perspective: 500px;
@@ -72,4 +74,18 @@ body {
     border: 1px solid;
     letter-spacing: 1px;
     padding: 5px 10px;
+}
+/*Prices*/
+.prices, .solo, .group, .family {
+    flex: 0 1 50%;
+    display: inline-flex;
+    flex-flow: column wrap;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.prices img {
+    width: 25%;
+    height: 25%;
+    border-radius: 10%;
+    box-shadow: 0px 0px 15px #555;
 }
